# wayneluk

./: .gitignore  CMakeLists.txt  Makefile  readme.md  todo.md
js4416/: reflection.md
pvk16/: reflection.md
src/: CPU.cpp  CPU.h  Instruction.cpp  Instruction.h  Memory.cpp  Memory.h  Simulator.cpp
src/CPU/: CPU.cpp  CPU.h
src/Instruction/: ImmediateInstruction.cpp  ImmediateInstruction.h  Instruction.cpp  Instruction.h  JumpInstruction.cpp  JumpInstruction.h  RegisterInstruction.cpp  RegisterInstruction.h
src/Instructions/: ITypeInstruction.cpp  ITypeInstruction.h  Instruction.cpp  Instruction.h  JTypeInstruction.cpp  JTypeInstruction.h  RTypeInstruction.cpp  RTypeInstruction.h
test/: readme.md  testbench  testbench.py
test/s/: add-01.s  add-02.s  addi-01.s  addi-02.s  addi-03.s  lui-01.s  lui-02.s  storeword.s  sw-01.s
test/src/: Makefile  add-01.s  add-02.s  add-03.s  add-04.s  add-05.s  addi-01.s  addi-02.s  addi-03.s  addi-04.s  addi-05.s  addiu-01.s  addiu-02.s  addiu-03.s  addu-01.s  addu-02.s  addu-03.s  and-01.s  and-02.s  and-03.s  and-04.s  andi-01.s  andi-02.s  andi-03.s  andi-04.s  andi-05.s  beq-01.s  beq-02.s  beq-03.s  bgez-01.s  bgez-02.s  bgez-03.s  bgezal-01.s  bgezal-02.s  bgezal-03.s  bgtz-01.s  bgtz-02.s  bgtz-03.s  blez-01.s  blez-02.s  (+263 more)
test/src/check/: add-01.s  add-03.s  addiu-01.s  addiu-02.s  lui-01.s  ori-01.s  ori-02.s
